more fixes -adam